--- a/machine.html
+++ b/machine.html
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercyresconsulting.recruitee.com/o/praktikantwerkstudent-data-sciencemachine-learning-wmd'>
+<h5><a href='https://careercyresconsulting.recruitee.com/o/praktikantwerkstudent-data-sciencemachine-learning-wmd'>
       Praktikant/Werkstudent Data Science/Machine Learning (w/m/d) - CYRES Consulting Services GmbH
     </a></h5> 
 <p><span class="badge badge-light">M?nchen</span></p>
@@ -231,7 +231,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698290308-machine-learning-engineer'>Tradeshift Machine Learning Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698290308-machine-learning-engineer'>Tradeshift Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -311,7 +311,7 @@ Engineer to join the Cityblock Prototype Engineering team. You will work with?..
 <p><span class="badge badge-light">Campbell Campbell</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/sensynehealth/j/6358903D5A/'>Machine Learning Researcher - Sensyne Health</a></h5> 
+<h5><a href='https://apply.workable.com/sensynehealth/j/6358903D5A/'>Machine Learning Researcher - Sensyne Health</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>14 hours ago ... Hands-on experience using one of the following deep learning libraries: 
 Tensorflow, PyTorch, Theano or similar. Experience of analysing clinical/
@@ -432,7 +432,7 @@ ML;?...</p>
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensortechnologies.recruitee.com/o/trader-with-machine-learning-experience'>
+<h5><a href='https://tensortechnologies.recruitee.com/o/trader-with-machine-learning-experience'>
       Trader with Machine Learning experience - Tensor Technologies
     </a></h5> 
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
@@ -477,7 +477,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Santa Monica</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.xenonstack.com/'>Jobs in Mohali for Big Data, Cloud, Machine Learning - XenonStack</a></h5> 
+<h5><a href='https://careers.xenonstack.com/'>Jobs in Mohali for Big Data, Cloud, Machine Learning - XenonStack</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
